# soy_geo

./: .gitignore  README.md  mix.exs
benchmark/: tree_bench.exs
lib/: soy_geo.ex
lib/soy_geo/: application.ex  distance.ex  native.ex  tree.ex
native/soy_geo_native/: Cargo.toml  README.md
native/soy_geo_native/src/: float64.rs  geom_ex.rs  lib.rs  rtree_ex.rs
test/: soy_geo_test.exs
test/soy_geo/: distance_test.exs  tree_test.exs
