[package]
name = "soy_geo_native"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "soy_geo_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.24.0"
geo = "0.19.0"
rstar = "0.9.2"
geo-types ={version = "0.7.3", features = ["use-rstar_0_9", "approx"]}
hashbrown = "0.12.0"
num-traits = "0.2.14"
latlon = "0.1.3"
geojson = "0.22.2"